[package]
name = "webrtc-streamer"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.6.0"
opencv = { version = "0.92.0", features = ["clang-runtime"] }
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.203", features = ["derive"] }
tokio = { version = "1.38.0", features = ["full"] }
webrtc = "0.11.0"
