[package]
name = "webrtc-streamer"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.6.0"
futures = "0.3.30"
hyper = { version = "1.3.1", features = ["full"] }
lazy_static = "1.4.0"
opencv = { version = "0.92.0", features = ["clang-runtime"] }
reqwest = { version = "0.12.4", features = ["json"] }
reqwest-websocket = { version = "0.4.1", features = ["json"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["full"] }
webrtc = "0.11.0"
